# C-Homework-Technopark-

./: README.md  gitignore  gitmodules
hw1/: CMakeLists.txt  README.md
hw1/files/: result.txt  test.txt
hw1/include/: Org_struct.h  Read_write.h
hw1/src/: Org_methods.c  Read_write.c  main.c
hw1/tests/: test.cpp
